I FIX OUR PROBLEMS!!:Refactor bacon board rendering and layout for improved structure and spacing

--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,14 @@ fieldset{
 
 }
 
-.bacon-board{
-    margin-top: 20%;
+.bacon-board-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8vh;
+    gap: 1em;
 }
+
 fieldset div:nth-child(even){
 
     background-color: #b04d4d;
